SIRONA-6 basic EhCache integration
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1544178 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/plugins/ehcache/agent/pom.xml
+++ b/server/plugins/ehcache/agent/pom.xml
@@ -19,21 +19,37 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-server</artifactId>
+    <artifactId>sirona-ehcache</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>sirona-plugins</artifactId>
-  <name>Apache Sirona Incubator :: Server :: Plugins</name>
-  <packaging>pom</packaging>
+  <artifactId>sirona-ehcache-agent</artifactId>
+  <name>Apache Sirona Incubator :: Server :: Plugins :: EhCache :: Agent</name>
 
-  <modules>
-    <module>tomee</module>
-    <module>api</module>
-    <module>hazelcast</module>
-    <module>ehcache</module>
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+  </dependencies>
 </project>
