--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <tomcat.version>7.0.47</tomcat.version>
     <arquillian.version>1.0.3.Final</arquillian.version> <!-- for tomcat adapter -->
     <openejb.version>4.5.2</openejb.version>
+    <slf4j.version>1.7.5</slf4j.version>
   </properties>
 
   <modules>
@@ -299,11 +300,20 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- we rely on JUL but some dependencies can need slf4j, ex: EhCache -->
       <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-math3</artifactId>
-        <version>3.2</version>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>provided</scope>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-jdk14</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
