make more sense to plugins module on the top
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1544357 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
   <modules>
     <module>core</module>
     <module>agent</module>
+    <module>plugins</module>
     <module>server</module>
   </modules>
 
