--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -19,8 +19,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>sirona-server</artifactId>
     <groupId>org.apache.sirona</groupId>
+    <artifactId>sirona</artifactId>
     <version>0.1-incubating-SNAPSHOT</version>
   </parent>
 
