--- a/plugins/api/pom.xml
+++ b/plugins/api/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-plugins-api</artifactId>
-  <name>Apache Sirona Incubator :: Server :: Plugins :: API</name>
+  <name>Apache Sirona Incubator :: Plugins :: API</name>
 
   <dependencies>
     <dependency>
