--- a/plugins/tomee/pom.xml
+++ b/plugins/tomee/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>sirona-tomee</artifactId>
-  <name>Apache Sirona Incubator :: Server :: Plugins :: TomEE</name>
+  <name>Apache Sirona Incubator :: Plugins :: TomEE</name>
   <packaging>pom</packaging>
 
   <modules>
