fix staging site
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1544396 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
     <slf4j.version>1.7.5</slf4j.version>
   </properties>
 
+  <distributionManagement>
+    <site>
+      <id>apache.website.svnpub</id>
+      <url>scm:svn:${sirona.scmPubUrl}</url>
+    </site>
+  </distributionManagement>
+
   <modules>
     <module>core</module>
     <module>agent</module>
