--- a/pom.xml
+++ b/pom.xml
@@ -258,7 +258,7 @@
         <artifactId>maven-scm-publish-plugin</artifactId>
         <version>1.0-beta-2</version>
         <configuration>
-          <content>${project.reporting.outputDirectory}</content>
+          <content>${project.build.directory}/staging</content>
           <pubScmUrl>scm:svn:${sirona.scmPubUrl}</pubScmUrl>
           <checkoutDirectory>${sirona.scmPubCheckoutDirectory}</checkoutDirectory>
           <tryUpdate>true</tryUpdate>
