users can be able to add their own cache Statistics to add in counter
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1544462 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/src/test/resources/sirona.properties
+++ b/core/src/test/resources/sirona.properties
@@ -15,3 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 org.apache.sirona.spi.SPI = org.apache.sirona.spi.SpiTestImpl
+
+org.apache.sirona.ehcache.methods=foo;bar;beer
+
+org.apache.sirona.goodbeer=true
