SIRONA-10 adding sirona-javaagent
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1545058 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -34,5 +34,6 @@
     <module>performance</module>
     <module>store</module>
     <module>pull</module>
+    <module>javaagent</module>
   </modules>
 </project>
