SIRONA-10 better javaagent handling exceptions
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1545199 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -32,7 +32,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>sirona-core</artifactId>
+      <artifactId>sirona-aop</artifactId>
     </dependency>
     <dependency>
       <groupId>org.ow2.asm</groupId>
