--- a/agent/performance/aop/pom.xml
+++ b/agent/performance/aop/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-performance</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.1-incubating</version>
+    <version>0.2-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-aop</artifactId>
