--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona</artifactId>
-    <version>0.1-incubating</version>
+    <version>0.2-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
