--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                     http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -26,7 +26,7 @@
 
   <groupId>org.apache.sirona</groupId>
   <artifactId>sirona</artifactId>
-  <version>0.1-incubating</version>
+  <version>0.2-incubating-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Sirona Incubator</name>
   <url>http://sirona.incubator.apache.org/docs/${project.version}</url>
@@ -130,9 +130,9 @@
   </mailingLists>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/sirona/tags/sirona-0.1-incubating</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/sirona/tags/sirona-0.1-incubating</developerConnection>
-    <url>http://svn.apache.org/viewvc/incubator/sirona/tags/sirona-0.1-incubating</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/sirona/trunk/</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/sirona/trunk/</developerConnection>
+    <url>http://svn.apache.org/viewvc/incubator/sirona/trunk/</url>
   </scm>
 
   <ciManagement>
