--- a/server/collector/pom.xml
+++ b/server/collector/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>sirona-server</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.1-incubating</version>
+    <version>0.2-incubating-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
