SIRONA-12 SIRONA-13 allowing to use @AutoSet with InvocationListeners + config for CounterListener
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1545656 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/src/test/resources/sirona.properties
+++ b/core/src/test/resources/sirona.properties
@@ -19,3 +19,7 @@ org.apache.sirona.spi.SPI = org.apache.sirona.spi.SpiTestImpl
 org.apache.sirona.ehcache.methods=foo;bar;beer
 
 org.apache.sirona.goodbeer=true
+
+org.apache.sirona.configuration.IoCsTest$Field.field = field-value
+org.apache.sirona.configuration.IoCsTest$Method.method = method-value
+org.apache.sirona.configuration.IoCsTest$MethodNotField.methodNotField = method-value-again
