--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -27,6 +27,12 @@
   <artifactId>sirona-javaagent</artifactId>
   <name>Apache Sirona Incubator :: Agent :: JavaAgent</name>
 
+  <properties>
+    <test.debug.remote>false</test.debug.remote>
+    <asm.version>4.1</asm.version>
+    <agent.class>org.apache.sirona.javaagent.SironaAgent</agent.class>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.sirona</groupId>
@@ -101,12 +107,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemPropertyVariables>
+            <test.debug.remote>${test.debug.remote}</test.debug.remote>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
-  <properties>
-    <asm.version>4.1</asm.version>
-
-    <agent.class>org.apache.sirona.javaagent.SironaAgent</agent.class>
-  </properties>
 </project>
