--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -97,6 +97,8 @@
             </goals>
             <configuration>
               <createSourcesJar>true</createSourcesJar>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <shadedClassifierName>shaded</shadedClassifierName>
               <relocations>
                 <relocation>
                   <pattern>org.objectweb.asm</pattern>
