--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -59,6 +59,14 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.2.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
