produce a test jar to be able to reuse JavaAgentRunner
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1561907 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -78,7 +78,14 @@
           <execution>
             <id>pre-build-jar</id>
             <phase>test-compile</phase>
-            <goals><goal>jar</goal></goals>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
           </execution>
         </executions>
         <configuration>
