--- a/server/boomerang/pom.xml
+++ b/server/boomerang/pom.xml
@@ -36,5 +36,10 @@
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-core</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 </project>
