--- a/pom.xml
+++ b/pom.xml
@@ -492,15 +492,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.8</version>
+        <version>2.9</version>
         <inherited>false</inherited>
         <configuration>
           <columnNames>Type,Fix Version,Key,Summary,Assignee,Status,Created</columnNames>
           <maxEntries>200</maxEntries>
           <onlyCurrentVersion>true</onlyCurrentVersion>
           <resolutionIds>Fixed</resolutionIds>
+          <statusIds>Closed,Resolved</statusIds>
           <sortColumnNames>Type</sortColumnNames>
-          <!--fixVersionIds>12320767</fixVersionIds-->
+          <!--
+          <fixVersionIds>12325648</fixVersionIds>
+          -->
           <useJql>true</useJql>
         </configuration>
         <reportSets>
