start of path tracking
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1569191 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -23,6 +23,6 @@ org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   prefix:junit
 
 
-org.apache.sirona.javaagent.path.tracking.activate=false
+org.apache.sirona.javaagent.path.tracking.activate=true
 
 
