--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <test.debug.remote>false</test.debug.remote>
+    <sirona.agent.debug>false</sirona.agent.debug>
     <asm.version>4.1</asm.version>
     <agent.class>org.apache.sirona.javaagent.SironaAgent</agent.class>
   </properties>
@@ -130,6 +131,8 @@
         <configuration>
           <systemPropertyVariables>
             <test.debug.remote>${test.debug.remote}</test.debug.remote>
+            <project.build.directory>${project.build.directory}</project.build.directory>
+            <sirona.agent.debug>${sirona.agent.debug}</sirona.agent.debug>
           </systemPropertyVariables>
         </configuration>
       </plugin>
