yup I use this os :-)
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1569198 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -20,7 +20,8 @@ org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   prefix:com,\
   regex:org.apache.test.*Test\\..*,\
   prefix:org.junit,\
-  prefix:junit
+  prefix:junit, \
+  prefix:com.apple
 
 
 org.apache.sirona.javaagent.path.tracking.activate=true
