use an extended in memory storage to get all
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1569628 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -24,6 +24,7 @@ org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   prefix:com.apple
 
 
+org.apache.sirona.store.DataStoreFactory = org.apache.sirona.pathtracking.test.ExtDataStoreFactory
 org.apache.sirona.javaagent.path.tracking.activate=true
 
 
