@AutoSet was not handling inheritance + supporting simple placeholder in properties
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1569960 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -14,15 +14,18 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.sirona.javaagent.listener.CounterListener.excludes = \
-  prefix:java,\
-  prefix:sun,\
-  prefix:com,\
-  regex:org.apache.test.*Test\\..*,\
-  prefix:org.junit,\
-  prefix:junit, \
-  prefix:com.apple
+excludes = \
+    prefix:java,\
+    prefix:sun,\
+    prefix:com,\
+    regex:org.apache.test.*Test\\..*,\
+    prefix:org.junit,\
+    prefix:junit, \
+    prefix:org.junit, \
+    prefix:com.apple
 
+org.apache.sirona.javaagent.listener.PathTrackingInvocationListener.excludes = ${excludes}
+org.apache.sirona.javaagent.listener.CounterListener.excludes = ${excludes}
 
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.pathtracking.test.ExtDataStoreFactory
 org.apache.sirona.javaagent.path.tracking.activate=true
