--- a/agent/javaagent/src/test/resources/sirona.properties
+++ b/agent/javaagent/src/test/resources/sirona.properties
@@ -14,6 +14,16 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
+org.apache.sirona.javaagent.listener.PathTrackingInvocationListener.excludes = \
+  prefix:java,\
+  prefix:sun,\
+  prefix:com,\
+  regex:org.apache.test.*Test\\..*,\
+  prefix:org.junit,\
+  prefix:junit, \
+  prefix:org.junit, \
+  prefix:com.apple
+
 org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   prefix:java,\
   prefix:sun,\
@@ -21,6 +31,7 @@ org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   regex:org.apache.test.*Test\\..*,\
   prefix:org.junit,\
   prefix:junit, \
+  prefix:org.junit, \
   prefix:com.apple
 
 
