--- a/server/store/cassandra/pom.xml
+++ b/server/store/cassandra/pom.xml
@@ -70,4 +70,47 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <createSourcesJar>true</createSourcesJar>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <shadedClassifierName>shaded</shadedClassifierName>
+              <relocations>
+                <relocation>
+                  <pattern>com.google</pattern>
+                  <shadedPattern>org.apache.sirona.google</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.apache</pattern>
+                  <shadedPattern>org.apache.sirona.apache</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>me.prettyprint</pattern>
+                  <shadedPattern>org.apache.sirona.me.prettyprint</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>com.eaio</pattern>
+                  <shadedPattern>org.apache.sirona.com.eaio</shadedPattern>
+                </relocation>
+
+              </relocations>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
