--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
           <version>1.8</version>
         </plugin>
 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>2.1</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
     <plugins>
