move logging debug in only place
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1570442 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -119,6 +119,12 @@
                   <pattern>org.objectweb.asm</pattern>
                   <shadedPattern>org.apache.sirona.asm4</shadedPattern>
                 </relocation>
+                <!--
+                <relocation>
+                  <pattern>org.apache.sirona</pattern>
+                  <shadedPattern>org.apache.sirona.sirona</shadedPattern>
+                </relocation>
+                -->
               </relocations>
             </configuration>
           </execution>
