store path tracking via collector/cube
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1573397 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cube/src/test/resources/sirona.properties
+++ b/agent/store/cube/src/test/resources/sirona.properties
@@ -19,3 +19,8 @@ org.apache.sirona.cube.period = 100
 org.apache.sirona.cube.CubeBuilder.collector = http://localhost:1234/1.0/event/put
 
 org.apache.sirona.core.gauge.activated = false
+
+
+org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
+
+org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
