--- a/server/collector/src/test/resources/sirona.properties
+++ b/server/collector/src/test/resources/sirona.properties
@@ -20,3 +20,7 @@ org.apache.sirona.cube.CubeBuilder.collector = http://localhost:1234
 org.apache.sirona.cube.CubeBuilder.marker = local
 
 org.apache.sirona.core.gauge.activated = false
+
+org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
+
+org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
