--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,12 @@
           <version>2.1</version>
         </plugin>
 
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
     <plugins>
@@ -387,6 +393,13 @@
         <artifactId>sirona-web</artifactId>
         <version>${project.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.9</version>
+      </dependency>
+
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-codec-http</artifactId>
