--- a/server/collector/pom.xml
+++ b/server/collector/pom.xml
@@ -28,6 +28,11 @@
   <name>Apache Sirona Incubator :: Server :: Collector</name>
   <packaging>war</packaging>
 
+  <properties>
+    <tomcatRunPort>9090</tomcatRunPort>
+    <tomcatRunPath>/sirona-collector</tomcatRunPath>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
@@ -50,7 +55,6 @@
       <artifactId>jackson-jaxrs-json-provider</artifactId>
       <version>2.2.2</version>
     </dependency>
-
 
     <dependency>
       <groupId>org.apache.sirona</groupId>
@@ -87,6 +91,29 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <configuration>
+          <port>${tomcatRunPort}</port>
+          <path>${tomcatRunPath}</path>
+          <systemProperties>
+            <org.apache.sirona.configuration.sirona.properties>${basedir}/sirona.properties</org.apache.sirona.configuration.sirona.properties>
+          </systemProperties>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.sirona</groupId>
+            <artifactId>sirona-core</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.sirona</groupId>
+            <artifactId>sirona-cassandra</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
     <pluginManagement>
