use gzip compression to transport data
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1573398 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cube/pom.xml
+++ b/agent/store/cube/pom.xml
@@ -42,6 +42,11 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jzlib</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
