--- a/server/collector/pom.xml
+++ b/server/collector/pom.xml
@@ -70,6 +70,10 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jzlib</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -99,7 +103,7 @@
           <port>${tomcatRunPort}</port>
           <path>${tomcatRunPath}</path>
           <systemProperties>
-            <org.apache.sirona.configuration.sirona.properties>${basedir}/sirona.properties</org.apache.sirona.configuration.sirona.properties>
+            <org.apache.sirona.configuration.sirona.properties>${basedir}/src/test/sirona.properties</org.apache.sirona.configuration.sirona.properties>
           </systemProperties>
         </configuration>
         <dependencies>
