using compression must be configurable and off per default
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1573399 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/collector/pom.xml
+++ b/server/collector/pom.xml
@@ -74,6 +74,12 @@
       <groupId>com.jcraft</groupId>
       <artifactId>jzlib</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-cassandra</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -102,22 +108,11 @@
         <configuration>
           <port>${tomcatRunPort}</port>
           <path>${tomcatRunPath}</path>
+          <useTestClasspath>true</useTestClasspath>
           <systemProperties>
             <org.apache.sirona.configuration.sirona.properties>${basedir}/src/test/sirona.properties</org.apache.sirona.configuration.sirona.properties>
           </systemProperties>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.sirona</groupId>
-            <artifactId>sirona-core</artifactId>
-            <version>${project.version}</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.sirona</groupId>
-            <artifactId>sirona-cassandra</artifactId>
-            <version>${project.version}</version>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
     <pluginManagement>
