add method to send unit update, ignore some test files, add possibility to use a test file
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1573453 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ target
 out/
 agent/javaagent/dependency-reduced-pom.xml
 .java-version
+
+## local testing files 
+agentToTomcat.sh
+server/reporting/src/test/sirona.properties
+startCollector.sh
