--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -130,6 +130,9 @@
           <port>${tomcatRunPort}</port>
           <path>${tomcatRunPath}</path>
           <skip>${sirona.reporting.tomcat.skip}</skip>
+          <systemProperties>
+            <org.apache.sirona.configuration.sirona.properties>${basedir}/src/test/sirona.properties</org.apache.sirona.configuration.sirona.properties>
+          </systemProperties>
         </configuration>
         <dependencies>
           <dependency>
