use a property for more custom configuration
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1573454 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -32,6 +32,7 @@
     <tomcatRunPort>8080</tomcatRunPort>
     <tomcatRunPath>/sirona</tomcatRunPath>
     <sirona.reporting.tomcat.skip>false</sirona.reporting.tomcat.skip>
+    <sirona.properties.path>${basedir}/src/test/sirona.properties</sirona.properties.path>
   </properties>
 
   <dependencies>
@@ -131,7 +132,7 @@
           <path>${tomcatRunPath}</path>
           <skip>${sirona.reporting.tomcat.skip}</skip>
           <systemProperties>
-            <org.apache.sirona.configuration.sirona.properties>${basedir}/src/test/sirona.properties</org.apache.sirona.configuration.sirona.properties>
+            <org.apache.sirona.configuration.sirona.properties>${sirona.properties.path}</org.apache.sirona.configuration.sirona.properties>
           </systemProperties>
         </configuration>
         <dependencies>
