--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -176,4 +176,31 @@
       </plugins>
     </pluginManagement>
   </build>
+
+  <profiles>
+    <profile>
+      <id>cassandra</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <dependencies>
+              <dependency>
+                <groupId>org.apache.sirona</groupId>
+                <artifactId>sirona-core</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.sirona</groupId>
+                <artifactId>sirona-cassandra</artifactId>
+                <version>${project.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
