--- a/server/reporting/src/test/resources/sirona.properties
+++ b/server/reporting/src/test/resources/sirona.properties
@@ -15,3 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 org.apache.sirona.store.status.NodeStatusDataStore = org.apache.sirona.store.status.EmptyStatuses
+org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
