--- a/agent/performance/jaxrs/cxf/pom.xml
+++ b/agent/performance/jaxrs/cxf/pom.xml
@@ -40,4 +40,20 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <systemPropertyVariables>
+              <arquillian.launch>tomcat7</arquillian.launch>
+              <tomcat.http>${tomcat.http}</tomcat.http>
+            </systemPropertyVariables>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
