--- a/agent/performance/web/pom.xml
+++ b/agent/performance/web/pom.xml
@@ -135,6 +135,7 @@
           <configuration>
             <systemPropertyVariables>
               <arquillian.launch>tomcat7</arquillian.launch>
+              <tomcat.http>${tomcat.http}</tomcat.http>
             </systemPropertyVariables>
           </configuration>
         </plugin>
