fix test random http port usage
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1574724 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -170,6 +170,7 @@
           <configuration>
             <systemPropertyVariables>
               <arquillian.launch>tomcat7</arquillian.launch>
+              <tomcat.http>${tomcat.http}</tomcat.http>
             </systemPropertyVariables>
           </configuration>
         </plugin>
