--- a/plugins/hazelcast/gui/pom.xml
+++ b/plugins/hazelcast/gui/pom.xml
@@ -134,6 +134,7 @@
           <configuration>
             <systemPropertyVariables>
               <arquillian.launch>tomcat7</arquillian.launch>
+              <tomcat.http>${tomcat.http}</tomcat.http>
             </systemPropertyVariables>
           </configuration>
         </plugin>
