rename to add later a listener for path tracking invocation
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1576295 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -24,7 +24,7 @@ excludes = \
     prefix:org.junit, \
     prefix:com.apple
 
-org.apache.sirona.javaagent.listener.PathTrackingInvocationListener.excludes = ${excludes}
+org.apache.sirona.javaagent.listener.PathTrackingListener.excludes = ${excludes}
 org.apache.sirona.javaagent.listener.CounterListener.excludes = ${excludes}
 
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.pathtracking.test.ExtDataStoreFactory
