--- a/agent/javaagent/src/test/resources/sirona.properties
+++ b/agent/javaagent/src/test/resources/sirona.properties
@@ -14,7 +14,7 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.sirona.javaagent.listener.PathTrackingInvocationListener.excludes = \
+org.apache.sirona.javaagent.listener.PathTrackingListener.excludes = \
   prefix:java,\
   prefix:sun,\
   prefix:com,\
