implement a PathTrackingInvocationListener for users being able to do their own
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1576299 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -22,7 +22,8 @@ excludes = \
     prefix:org.junit,\
     prefix:junit, \
     prefix:org.junit, \
-    prefix:com.apple
+    prefix:com.apple, \
+    prefix:org.apache.test.sirona.javaagent.MockPathTrackingInvocationListener
 
 org.apache.sirona.javaagent.listener.PathTrackingListener.excludes = ${excludes}
 org.apache.sirona.javaagent.listener.CounterListener.excludes = ${excludes}
