--- a/agent/store/cube/pom.xml
+++ b/agent/store/cube/pom.xml
@@ -39,6 +39,7 @@
       <groupId>com.lmax</groupId>
       <artifactId>disruptor</artifactId>
       <version>3.2.0</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
