start a cube collector using httpclient (dependency optional and not the default one!! :P )
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1576301 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cube/pom.xml
+++ b/agent/store/cube/pom.xml
@@ -43,6 +43,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.3.3</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
@@ -93,6 +100,14 @@
                 <relocation>
                   <pattern>com.lmax</pattern>
                   <shadedPattern>org.apache.sirona.com.lmax</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.apache.http</pattern>
+                  <shadedPattern>org.apache.sirona.org.apache.http</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.apache.commons</pattern>
+                  <shadedPattern>org.apache.sirona.org.apache.commons</shadedPattern>
                 </relocation>
                 <!--
                 <relocation>
