make this more configurable
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1576557 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cube/pom.xml
+++ b/agent/store/cube/pom.xml
@@ -50,6 +50,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpasyncclient</artifactId>
+      <version>4.0.1</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
