start working on path tracking cassandra data retrieve
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1578371 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/collector/src/test/sirona.properties
+++ b/server/collector/src/test/sirona.properties
@@ -18,9 +18,9 @@
 org.apache.sirona.cassandra.CassandraBuilder.keyspace = SironaKeySpace
 org.apache.sirona.cassandra.CassandraBuilder.hosts = localhost:9160
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.cassandra.CassandraAgentDataStoreFactory
-org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.cassandra.pathtracking.CassandraPathTrackingDataStore
+org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.cassandra.collector.pathtracking.CassandraPathTrackingDataStore
 
 
-org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.cassandra.pathtracking.CassandraPathTrackingDataStore
+org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.cassandra.collector.pathtracking.CassandraPathTrackingDataStore
 org.apache.sirona.store.gauge.CollectorGaugeDataStore=org.apache.sirona.cassandra.collector.gauge.CassandraCollectorGaugeDataStore
 
