--- a/server/store/cassandra/pom.xml
+++ b/server/store/cassandra/pom.xml
@@ -34,6 +34,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.cassandra</groupId>
+      <artifactId>cassandra-thrift</artifactId>
+      <version>1.2.15</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.hectorclient</groupId>
       <artifactId>hector-core</artifactId>
       <version>1.1-4</version>
