--- a/server/store/cassandra/pom.xml
+++ b/server/store/cassandra/pom.xml
@@ -37,6 +37,12 @@
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-thrift</artifactId>
       <version>1.2.15</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
