--- a/agent/javaagent/src/test/resources/sirona.properties
+++ b/agent/javaagent/src/test/resources/sirona.properties
@@ -22,7 +22,8 @@ org.apache.sirona.javaagent.listener.PathTrackingListener.excludes = \
   prefix:org.junit,\
   prefix:junit, \
   prefix:org.junit, \
-  prefix:com.apple
+  prefix:com.apple,\
+  container:jvm
 
 org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   prefix:java,\
@@ -32,7 +33,8 @@ org.apache.sirona.javaagent.listener.CounterListener.excludes = \
   prefix:org.junit,\
   prefix:junit, \
   prefix:org.junit, \
-  prefix:com.apple
+  prefix:com.apple\
+  container:jvm
 
 
 org.apache.sirona.javaagent.path.tracking.activate=false
