ok error was due to eager visit of label which was wrongly generating frames. Thanks Matt for your weaver ;)
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1580767 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -48,12 +48,7 @@
 
     <dependency>
       <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>${asm.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-commons</artifactId>
+      <artifactId>asm-all</artifactId>
       <version>${asm.version}</version>
     </dependency>
 
