--- a/server/collector/pom.xml
+++ b/server/collector/pom.xml
@@ -57,6 +57,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.lmax</groupId>
+      <artifactId>disruptor</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-cube</artifactId>
       <version>${project.version}</version>
