--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-scm-publish-plugin</artifactId>
-        <version>1.0-beta-2</version>
+        <version>1.1</version>
         <configuration>
           <content>${project.build.directory}/staging</content>
           <pubScmUrl>scm:svn:${sirona.scmPubUrl}</pubScmUrl>
