--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.sirona</groupId>
     <artifactId>sirona</artifactId>
-    <version>0.2-incubating-SNAPSHOT</version>
+    <version>0.2-incubating</version>
   </parent>
 
   <artifactId>sirona-core</artifactId>
